--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,9 @@
 [user]
   name = Til Goepfert
+  # email = til.goepfert@dxc.com
+
+[core]
+  excludesfile = ~/.gitignore_global
 
 [alias]
   graphgpg = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)[gpg:%GK%x20%G?]%C(reset)%n%x20%s%n"
@@ -10,5 +14,6 @@
   cached = diff --cached
   d = difftool
   c = clone
+
 [color]
   ui = auto
