--- a/config/.config/Code/User/settings.json
+++ b/config/.config/Code/User/settings.json
@@ -6,7 +6,7 @@
   "editor.fontFamily": "'Source Code Pro', 'Source Code Pro for Powerline'",
   "editor.renderIndentGuides": true,
   "editor.renderWhitespace": "boundary",
-  "editor.rulers": [100],
+  "editor.rulers": [100, 120],
   "editor.tabSize": 2,
 
   // ESLint
@@ -59,5 +59,5 @@
   },
   "workbench.iconTheme": "material-icon-theme",
   "workbench.statusBar.feedback.visible": false,
-  "workbench.colorTheme": "One Dark Pro"
+  "workbench.colorTheme": "One Dark Pro Vivid"
 }
