--- a/config/.config/Code/User/settings.json
+++ b/config/.config/Code/User/settings.json
@@ -3,7 +3,7 @@
   "editor.cursorStyle": "line-thin",
   "editor.cursorBlinking": "smooth",
   "editor.cursorSmoothCaretAnimation": true,
-  "editor.fontFamily": "'Source Code Pro', 'Source Code Pro for Powerline'",
+  "editor.fontFamily": "'Cascadia Code', 'Source Code Pro'",
   "editor.renderIndentGuides": true,
   "editor.renderWhitespace": "boundary",
   "editor.rulers": [100],
@@ -27,7 +27,7 @@
   // Integrated Terminal
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "line",
-  "terminal.integrated.fontFamily": "SauceCodePro Nerd Font",
+  "terminal.integrated.fontFamily": "MesloLGLDZ Nerd Font Mono",
   "terminal.integrated.scrollback": 10000,
 
   // JS
@@ -59,5 +59,7 @@
   },
   "workbench.iconTheme": "material-icon-theme",
   "workbench.statusBar.feedback.visible": false,
-  "workbench.colorTheme": "One Dark Pro"
+  "workbench.colorTheme": "One Dark Pro",
+  "editor.suggestSelection": "first",
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue"
 }
