--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -6,14 +6,18 @@
   excludesfile = ~/.gitignore_global
 
 [alias]
-  graphgpg = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)[gpg:%GK%x20%G?]%C(reset)%n%x20%s%n"
-  graph = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)%C(reset)%n%x20%s%n"
-  stat = status -sb
-  last = log -1 --stat
-  unstage = reset HEAD --
+  c = clone
+  cb = checkout -b
+  cm = commit -m
+  co = checkout
   cached = diff --cached
   d = difftool
-  c = clone
+  graphgpg = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)[gpg:%GK%x20%G?]%C(reset)%n%x20%s%n"
+  graph = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)%C(reset)%n%x20%s%n"
+  hardhat = reset --hard HEAD # GET YOUR HELMETS :D
+  last = log -1 --stat
+  stat = status -sb
+  unstage = reset HEAD --
 
 [color]
   ui = auto
