--- a/config/.config/Code/User/settings.json
+++ b/config/.config/Code/User/settings.json
@@ -2,15 +2,12 @@
   "editor.cursorStyle": "line-thin",
   "editor.cursorBlinking": "smooth",
   "editor.cursorSmoothCaretAnimation": true,
-  "editor.fontFamily": "'Cascadia Code', 'Noto Color Emoji', monospace",
+  "editor.fontFamily": "'Cascadia Code', 'MesloLGLDZ Nerd Font Mono', monospace",
   "editor.renderIndentGuides": true,
   "editor.renderWhitespace": "boundary",
   "editor.rulers": [100, 120],
   "editor.suggestSelection": "first",
   "editor.tabSize": 2,
-
-  "eslint.enable": true,
-  "eslint.packageManager": "yarn",
 
   "explorer.confirmDelete": true,
 
@@ -25,7 +22,7 @@
 
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "line",
-  "terminal.integrated.fontFamily": "MesloLGLDZ Nerd Font Mono",
+  "terminal.integrated.fontFamily": "'Cascadia Code', 'MesloLGLDZ Nerd Font Mono', monospace",
   "terminal.integrated.scrollback": 10000,
 
   "todo-tree.highlights.enabled": false,
