--- a/config/.config/Code/User/settings.json
+++ b/config/.config/Code/User/settings.json
@@ -25,7 +25,7 @@
 
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "line",
-  "terminal.integrated.fontFamily": "MesloLGLDZ Nerd Font Mono",
+  "terminal.integrated.fontFamily": "'Cascadia Code', 'Noto Color Emoji', monospace",
   "terminal.integrated.scrollback": 10000,
 
   "todo-tree.highlights.enabled": false,
