--- a/config/.config/Code/User/settings.json
+++ b/config/.config/Code/User/settings.json
@@ -22,7 +22,7 @@
 
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "line",
-  "terminal.integrated.fontFamily": "'Cascadia Code', 'MesloLGLDZ Nerd Font Mono', monospace",
+  "terminal.integrated.fontFamily": "'CaskaydiaCove Nerd Font Mono', 'Cascadia Code', monospace",
   "terminal.integrated.scrollback": 10000,
 
   "todo-tree.highlights.enabled": false,
