--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,23 +1,19 @@
 [user]
-  name = Til Goepfert
-  email = tilgoepfert@gmail.com
+	name = Til Goepfert
 
 [core]
-  excludesfile = ~/.gitignore_global
+	excludesfile = ~/.gitignore_global
 
 [alias]
-  c = clone
-  cb = checkout -b
-  cm = commit -m
-  co = checkout
-  cached = diff --cached
-  d = difftool
-  graphgpg = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)[gpg:%GK%x20%G?]%C(reset)%n%x20%s%n"
-  graph = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%C(blue)%x20(%ce)%x20%C(cyan)%C(reset)%n%x20%s%n"
-  hardhat = reset --hard HEAD # GET YOUR HELMETS :D
-  last = log -1 --stat
-  stat = status -sb
-  unstage = reset HEAD --
+	cached = diff --cached
+	hardhat = reset --hard HEAD # GET YOUR HELMETS :D
+	last = log -1 --stat
+	stat = status -sb
+	unstage = reset HEAD --
 
 [color]
-  ui = auto
+	ui = auto
+
+[init]
+	defaultBranch = main
+  
